welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type string
var h :string 
       ^BDRBuggle:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var h :string 
    ^